click events on markers and list register and create ajax calls to wikipedia

--- a/sass/refills_components/_tabs.scss
+++ b/sass/refills_components/_tabs.scss
@@ -60,6 +60,7 @@
     display: none;
     padding: $base-spacing $gutter;
     width: 100%;
+    color: white;
 
     @include media($tab-mode) {
       border-top: $tab-border;
