--- a/sass/style.css
+++ b/sass/style.css
@@ -494,7 +494,8 @@ header.navigation {
   .accordion-tabs-minimal .tab-content {
     display: none;
     padding: 1.5em 1.618em;
-    width: 100%; }
+    width: 100%;
+    color: white; }
     @media screen and (min-width: 40em) {
       .accordion-tabs-minimal .tab-content {
         border-top: 1px solid #ddd;
