--- a/sass/refills_components/_sliding_panel.scss
+++ b/sass/refills_components/_sliding_panel.scss
@@ -10,11 +10,11 @@
   $sliding-panel-background-focus: lighten($sliding-panel-background, 5%);
 
   @include position(fixed, 0 auto 0 0);
-  @include size(50vw 100%);
+  @include size(260px 100%);
   background: $sliding-panel-background;
   -webkit-overflow-scrolling: touch;
   overflow-y: auto;
-  transform: translateX(-50vw);
+  transform: translateX(-260px);
   transition: all 0.5s linear;
   z-index: 999999;
 
@@ -70,6 +70,8 @@
   outline: none;
   padding: 10px 16px;
   position: relative;
+  margin-top: 10px;
+  margin-left: 10px;
 
   img {
     height: 1.3em;
