--- a/sass/style.css
+++ b/sass/style.css
@@ -406,11 +406,11 @@ header.navigation {
   bottom: 0;
   left: 0;
   height: 100%;
-  width: 50vw;
+  width: 260px;
   background: #404040;
   -webkit-overflow-scrolling: touch;
   overflow-y: auto;
-  transform: translateX(-50vw);
+  transform: translateX(-260px);
   transition: all 0.5s linear;
   z-index: 999999; }
   .sliding-panel-content ul {
@@ -453,7 +453,9 @@ header.navigation {
   display: inline-block;
   outline: none;
   padding: 10px 16px;
-  position: relative; }
+  position: relative;
+  margin-top: 10px;
+  margin-left: 10px; }
   .sliding-panel-button img {
     height: 1.3em; }
 
@@ -475,7 +477,8 @@ header.navigation {
     color: #333;
     display: block;
     padding: 0.75em 1.618em;
-    text-decoration: none; }
+    text-decoration: none;
+    border-radius: 3px 3px 0 0; }
     @media screen and (min-width: 40em) {
       .accordion-tabs-minimal .tab-link {
         border-top: 0;
@@ -490,7 +493,8 @@ header.navigation {
         .accordion-tabs-minimal .tab-link.is-active {
           border: 1px solid #ddd;
           border-bottom-color: #fff;
-          margin-bottom: -1px; } }
+          margin-bottom: -1px;
+          margin-top: 10px; } }
   .accordion-tabs-minimal .tab-content {
     display: none;
     padding: 1.5em 1.618em;
@@ -499,10 +503,11 @@ header.navigation {
     @media screen and (min-width: 40em) {
       .accordion-tabs-minimal .tab-content {
         border-top: 1px solid #ddd;
+        border-left: 1px solid #ddd;
         float: left; } }
 
 #map_canvas {
-  height: calc(100vh - 60px);
+  height: calc(60vh - 60px);
   width: 100%; }
 
 #map_canvas img {
@@ -524,9 +529,38 @@ header.navigation {
 /*
  * Info Panel Header
  */
+body {
+  background-color: #333; }
+
+a {
+  color: #15c06c; }
+
+h1 {
+  color: white;
+  font-size: 36px;
+  float: right;
+  margin: 5px 10px 0 0; }
+
 .sliding-panel-content .navigation-wrapper h2 {
   float: left;
   padding: 20px;
   color: white; }
+
+#advertising {
+  float: left;
+  margin: 10px; }
+
+#info-tabs-section {
+  height: calc(50vh - 60px);
+  overflow: auto;
+  padding-left: 15px; }
+  #info-tabs-section .foursquare-item {
+    clear: both;
+    display: block;
+    float: left;
+    margin: 10px; }
+    #info-tabs-section .foursquare-item img {
+      float: left;
+      margin: 0 10px; }
 
 /*# sourceMappingURL=style.css.map */
