--- a/sass/style.css
+++ b/sass/style.css
@@ -563,4 +563,12 @@ h1 {
       float: left;
       margin: 0 10px; }
 
+@media only screen and (max-width: 1024px) {
+  #advertising {
+    display: none; } }
+@media only screen and (max-width: 710px) {
+  h1 {
+    font-size: 20px;
+    margin: 15px 10px 0 0; } }
+
 /*# sourceMappingURL=style.css.map */
