--- a/style.css
+++ b/style.css
@@ -694,4 +694,16 @@ h1 {
   margin: 0 10px;
 }
 
+@media only screen and (max-width: 1024px) {
+  #advertising {
+    display: none;
+  }
+}
+@media only screen and (max-width: 710px) {
+  h1 {
+    font-size: 20px;
+    margin: 15px 10px 0 0;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
